2002-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added DrawSetTextEncoding() function to specify text
    encoding (e.g. "UTF-8").

2002-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Extend 'convert -list type' output so it prints more details.
  * Fix draw.c problem when specifying font family names that
    contain spaces.

2002-08-15  Cristy  <cristy@mystic.es.dupont.com>
  * Finished 32-Bit QuantumDepth support.
  * Subimage memory leak fixed (bug report by William Radcliffe).
  * Fixed subimage specification memory overrun.
  * Subimage specification did not work properly under Windows.

2002-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fix problem with TEXT encoder.  It was prepending the
    filename to the text.

2002-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Render Postscript via Ghostscript DLL (gsdll32.dll) under
    Windows if it can be loaded.  Only ps.c currently uses
    this to verify there are no problems.

2002-08-14  Cristy  <cristy@mystic.es.dupont.com>
  * Added 16-bit raw write support to PPM.

2002-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Re-implemented ReadTTFImage() using the draw.h APIs.

2002-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fixed a libtool bug in order to allow passing -m64 to allow building
    64-bit ImageMagick using gcc 3.1 or later under SPARC Solaris.

2002-08-04  Cristy  <cristy@mystic.es.dupont.com>
  * Added experimental 32-bit QuantumDepth pixel support.
  * Stream support was not thread-safe (bug report by William Radcliffe).
  * Push/PopImagePixels() now recognizes the proper buffer length
	  (previously it operated on one scanline at a time).
  * Deprecated Down/Upscale defines.  Replaced them with Scale*ToQuantum()
    and ScaleQuantumTo*() methods.
    
2002-08-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Changed configure argument --disable-16bit-pixel to