@@ -318,7 +318,7 @@ MagickExport char *GetMagickConfigurePath(const char *filename,
           ConcatenateString(&search_path,path);
         }
     }
-#if defined(WIN32)
+#if defined(WIN32) & defined(UseInstalledImageMagick)
   {
     char
       *key_value;
